# Agentic_Engineering_Workflow

./: README.md  pyproject.toml
output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
src/agentic_engineering_workflow/: crew.py  main.py
