[project]
name = "agentic_engineering_workflow"
version = "0.1.0"
description = "agentic_engineering_workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
agentic_engineering_workflow = "agentic_engineering_workflow.main:run"
run_crew = "agentic_engineering_workflow.main:run"
train = "agentic_engineering_workflow.main:train"
replay = "agentic_engineering_workflow.main:replay"
test = "agentic_engineering_workflow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
